[gd_scene load_steps=7 format=2]

[ext_resource path="res://Frog.gd" type="Script" id=1]
[ext_resource path="res://assets/frog.png" type="Texture" id=2]
[ext_resource path="res://assets/frog_tongue.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 29.419

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=3]
resource_name = "TongueAttack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 48, 4 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Frog" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="TongueAttack" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="TongueAttack"]
position = Vector2( 0.0104084, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
offset = Vector2( 0.995665, 0.00303698 )

[node name="Area2D" type="Area2D" parent="TongueAttack/Sprite"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueAttack/Sprite/Area2D"]
position = Vector2( 1, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TongueAttack"]
anims/TongueAttack = SubResource( 3 )
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="body_entered" from="TongueAttack/Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
